gccida/c2/dwarf2out_abstract_function
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_abstract_function/src/dwarf2out.c:10606:1: error: must use 'enum' tag to refer to type 'dwarf_attribute'
dwarf_attribute dw_attr; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_abstract_function/src/dwarf2out.c:10610:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v10; // r14 
^
union 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_abstract_function/src/dwarf2out.c:10624:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 >= DINFO_LEVEL_NORMAL ) 
                    ^
3 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/dwarf2out_abstract_function/src/obj/dwarf2out.o] Error 1
